localization/v2.4.x/site/ko/integrations/integrations_overview.md
---
id: integrations_overview.md
summary: 이 페이지에서는 Milvus 및 타사 도구와 상호 작용할 수 있는 튜토리얼 목록을 제공합니다.
title: 통합 개요
---
<h1 id="Integrations-Overview" class="common-anchor-header">통합 개요<button data-href="#Integrations-Overview" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><p>이 페이지에서는 Milvus 및 타사 도구와 상호 작용할 수 있는 튜토리얼 목록을 제공합니다.</p>
<table>
<thead>
<tr><th>튜토리얼</th><th>사용 사례</th><th>파트너 또는 스택</th></tr>
</thead>
<tbody>
<tr><td><a href="/docs/ko/v2.4.x/integrate_with_llamaindex.md">Milvus 및 LlamaIndex를 사용한 RAG</a></td><td>RAG</td><td>밀버스, 라마인덱스</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/integrate_with_langchain.md">밀버스 및 랭체인과 RAG</a></td><td>RAG</td><td>밀버스, 랭체인</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/milvus_hybrid_search_retriever.md">LangChain의 Milvus 하이브리드 검색 리트리버</a></td><td>하이브리드 검색</td><td>밀버스, LangChain</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/integrate_with_openai.md">Milvus와 OpenAI를 사용한 시맨틱 검색</a></td><td>시맨틱 검색</td><td>Milvus, OpenAI</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/integrate_with_cohere.md">Milvus와 Cohere를 사용한 질문 답변</a></td><td>시맨틱 검색</td><td>밀버스, 코히어</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/integrate_with_hugging-face.md">밀버스와 허깅페이스를 이용한 질문 답변</a></td><td>질문 답변</td><td>밀버스, 허깅페이스</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/integrate_with_pytorch.md">밀버스와 파이토치를 이용한 이미지 검색</a></td><td>시맨틱 검색</td><td>밀버스, 파이토치</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/integrate_with_sentencetransformers.md">밀버스와 센텐스 트랜스포머를 사용한 동영상 검색</a></td><td>시맨틱 검색</td><td>밀버스, 센텐스 트랜스포머</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/basic_usage_langchain.md">LangChain에서 Milvus를 벡터 저장소로 사용하기</a></td><td>시맨틱 검색</td><td>밀버스, LangChain</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/integrate_with_haystack.md">밀버스와 헤이스택을 사용한 RAG</a></td><td>RAG</td><td>밀버스, 헤이스택</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/integrate_with_voxel51.md">밀버스 및 피프티원과 함께 비전 검색 수행하기</a></td><td>시맨틱 검색</td><td>밀버스, 피프티원</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/integrate_with_voyageai.md">Milvus와 VoyageAI를 이용한 시맨틱 검색</a></td><td>시맨틱 검색</td><td>Milvus, VoyageAI</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/integrate_with_bentoml.md">Milvus 및 BentoML을 사용한 RAG</a></td><td>RAG</td><td>Milvus, BentoML</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/integrate_with_dspy.md">Milvus 및 DSPy와 RAG</a></td><td>RAG</td><td>Milvus, DSPy</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/integrate_with_jina.md">Milvus 및 Jina를 사용한 시맨틱 검색</a></td><td>시맨틱 검색</td><td>Milvus, Jina</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/integrate_with_snowpark.md">스노우파크 컨테이너 서비스의 Milvus</a></td><td>데이터 연결</td><td>Milvus, Snowpark</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/integrate_with_whyhow.md">Milvus와 WhyHow를 이용한 규칙 기반 검색</a></td><td>질문 답변</td><td>Milvus, WhyHow</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/integrate_with_langfuse.md">랑퓨즈의 Milvus</a></td><td>관찰 가능성</td><td>밀버스, 랑퓨즈</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/integrate_with_ragas.md">Ragas와 Milvus를 사용한 RAG 평가</a></td><td>평가</td><td>밀버스, 라가스</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/integrate_with_memgpt.md">Milvus 및 MemGPT를 사용한 챗봇 에이전트</a></td><td>에이전트</td><td>Milvus, MemGPT</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/integrate_with_fastgpt.md">Milvus와 함께 FastGPT를 배포하는 방법</a></td><td>RAG</td><td>Milvus, FastGPT</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/integrate_with_vanna.md">Vanna 및 Milvus로 SQL 작성하기</a></td><td>RAG</td><td>Milvus, Vanna</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/integrate_with_camel.md">밀부스 및 카멜과 RAG</a></td><td>RAG</td><td>Milvus, Camel</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/integrate_with_airbyte.md">에어바이트 &amp; 밀버스: 오픈소스 데이터 이동 인프라</a></td><td>데이터 연결</td><td>Milvus, Airbyte</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/video_search_with_twelvelabs_and_milvus.md">고급 비디오 검색: 시맨틱 검색을 위한 Twelve Labs와 Milvus 활용하기</a></td><td>시맨틱 검색</td><td>Milvus, Twelve Labs</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/milvus_rag_with_vllm.md">Milvus, vLLM, Llama 3.1로 RAG 구축하기</a></td><td>RAG</td><td>Milvus, vLLM, LlamaIndex</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/llama_agents_metadata.md">미스트랄 AI, 밀버스, 라마 에이전트를 사용한 멀티 에이전트 시스템</a></td><td>에이전트</td><td>Milvus, Mistral AI, LlamaIndex</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/kafka-connect-milvus.md">Milvus와 카프카 연결</a></td><td>데이터 소스</td><td>밀버스, 카프카</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/kotaemon_with_milvus.md">밀버스와 코타에몬 RAG</a></td><td>RAG</td><td>밀버스, 코타에몬</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/apify_milvus_rag.md">검색 증강 세대: Apify로 웹사이트를 크롤링하고 질문 답변을 위해 Milvus에 데이터 저장하기</a></td><td>데이터 소스</td><td>Milvus, Apify</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/evaluation_with_deepeval.md">DeepEval을 사용한 평가</a></td><td>평가 및 관찰 가능성</td><td>Milvus, DeepEval</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/evaluation_with_phoenix.md">아리제 피오닉스를 사용한 평가</a></td><td>평가 및 관찰 가능성</td><td>Milvus, 아리제 피오닉스</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/dify_with_milvus.md">Milvus로 Dify 배포</a></td><td>오케스트레이션</td><td>Milvus, Dify</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/rag_with_langflow.md">Milvus와 함께 Langflow를 사용하여 RAG 시스템 구축하기</a></td><td>오케스트레이션</td><td>Milvus, Langflow</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/build_rag_on_arm.md">Arm 아키텍처에 RAG 구축</a></td><td>RAG</td><td>Milvus, Arm</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/build_RAG_with_milvus_and_fireworks.md">Milvus 및 Fireworks AI를 사용한 RAG 빌드</a></td><td>LLM</td><td>Milvus, Fireworks AI</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/build_RAG_with_milvus_and_lepton.md">Milvus 및 Lepton AI로 RAG 빌드하기</a></td><td>LLM</td><td>Milvus, 렙톤 AI</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/build_RAG_with_milvus_and_siliconflow">Milvus 및 SiliconFlow를 사용한 RAG 빌드</a></td><td>LLM</td><td>Milvus, SiliconFlow</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/rag_with_milvus_and_unstructured.md">Milvus와 비정형 데이터로 RAG 구축하기</a></td><td>데이터 소스</td><td>Milvus, 비정형</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/RAG_with_pii_and_milvus.md">Milvus + PII 마스커로 RAG 구축하기</a></td><td>데이터 소스</td><td>Milvus, PII 마스커</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/use_milvus_in_private_gpt.md">PrivateGPT에서 Milvus 사용</a></td><td>오케스트레이션</td><td>벡터 검색</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/quickstart_mem0_with_milvus.md">Mem0 및 Milvus 시작하기</a></td><td>에이전트</td><td>Mem0, Milvus</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/knowledge_table_with_milvus.md">Milvus를 사용한 지식 테이블</a></td><td>지식 엔지니어링</td><td>지식 테이블, Milvus</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/use_milvus_in_docsgpt.md">DocsGPT에서 Milvus 사용</a></td><td>오케스트레이션</td><td>DocsGPT, Milvus</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/use_milvus_with_sambanova.md">삼바노바에서 Milvus 사용</a></td><td>오케스트레이션</td><td>Milvus, 삼바노바</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/build_RAG_with_milvus_and_cognee.md">Milvus 및 Cognee로 RAG 구축하기</a></td><td>지식 엔지니어링</td><td>Milvus, Cognee</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/build_RAG_with_milvus_and_gemini.md">Milvus 및 Gemini를 사용한 RAG 빌드</a></td><td>LLM</td><td>밀버스, 제미니</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/build_RAG_with_milvus_and_ollama.md">밀버스 및 올라마로 RAG 빌드하기</a></td><td>LLM</td><td>밀버스, 올라마</td></tr>
<tr><td><a href="/docs/ko/v2.4.x/milvus_rag_with_dynamiq.md">다이나믹과 밀버스 시작하기</a></td><td>오케스트레이션</td><td>Milvus, Dynamiq</td></tr>
</tbody>
</table>
